--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A generated project at Fullstack Academy",
   "main": "server/start.js",
   "scripts": {
-    "start": "nodemon --watch server -e js,html server/start.js"
+    "start": "nodemon --watch server -e js,html server/start.js",
+    "test": "node_modules/.bin/testem"
   },
   "dependencies": {
     "angular": "1.5.0",
@@ -23,5 +24,11 @@
     "musicmetadata": "^2.0.1",
     "nodemon": "^1.3.7",
     "serve-favicon": "^2.2.0"
+  },
+  "devDependencies": {
+    "angular-mocks": "1.5.0",
+    "chai": "3.5.0",
+    "chai-spies": "0.7.1",
+    "testem": "1.2.2"
   }
 }
