--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "server/start.js",
   "scripts": {
     "start": "nodemon --watch server -e js,html server/start.js",
-    "test": "node_modules/.bin/testem",
+    "test": "./node_modules/.bin/mocha server/**/*.test.js --reporter spec",
+    "test:player": "node_modules/.bin/testem",
     "seed": "node ./bin/seed",
     "db-init": "./db-init.sh",
-    "postinstall": "npm run db-init",
-    "test": "./node_modules/.bin/mocha server/**/*.test.js --reporter spec"
+    "postinstall": "npm run db-init"
   },
   "dependencies": {
     "angular": "1.5.0",
